tests/samples/negative/error_handling/try_result_malformed.ax
module try_result_malformed;

enum ResultI32I32: u8 {
    okay(i32) = 1,
    err(i32) = 2,
}

fn parse() -> ResultI32I32 {
    return ResultI32I32.okay(1);
}

fn main() -> ResultI32I32 {
    let value: i32 = parse()?;
    return ResultI32I32.okay(value);
}
